# crane_plus

crane_plus_control/config/: crane_plus_controllers.yaml  master_slave.yaml
crane_plus_control/include/crane_plus_control/: crane_plus_driver.hpp  crane_plus_hardware.hpp
crane_plus_control/launch/: crane_master_slave_control.launch.py  crane_plus_control.launch.py
crane_plus_control/src/: crane_plus_driver.cpp  crane_plus_hardware.cpp
crane_plus_description/urdf/: crane_plus.ros2_control.xacro
crane_x7_hardware/: CMakeLists.txt  crane_x7_hardware.xml  package.xml
crane_x7_hardware/include/crane_x7_hardware/: crane_x7_driver.hpp  crane_x7_hardware.hpp  visibility_control.h
crane_x7_hardware/src/: crane_x7_driver.cpp  crane_x7_hardware.cpp
master_slave_controller/: CMakeLists.txt  package.xml  plugin.xml
master_slave_controller/include/master_slave_controller/: master_slave_controller.hpp  visibility_control.h
master_slave_controller/src/: master_slave_controller.cpp
my_controller/: CMakeLists.txt  my_plugin.xml  package.xml
my_controller/include/my_controller/: my_controller.hpp  visibility_control.h
my_controller/src/: my_controller.cpp
